酷爱安卓Java服务端完成之数据库表结构优化2

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
             <version>2.0</version>
         </dependency>
 
+
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -81,14 +82,9 @@
         </dependency>
         <!-- JSON end -->
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${spring.version}</version>
-            <scope>test</scope>
-        </dependency>
 
 
+        <!--log相关-->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -111,6 +107,14 @@
             <version>0.1.4</version>
         </dependency>
 
+
+        <!--spring相关 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -143,17 +147,19 @@
 
         <!-- connection pool -->
         <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jdbc</artifactId>
             <version>${tomcat-jdbc.version}</version>
             <scope>runtime</scope>
         </dependency>
 
-        <dependency>
-            <groupId>c3p0</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
-        </dependency>
 
         <dependency>
             <groupId>${jdbc.driver.groupId}</groupId>
@@ -229,7 +235,6 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3</version>
         </dependency>
-
     </dependencies>
 
     <build>
